// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defineBuildHostConfig includes react-router and msw dependencies 1`] = `
{
  "index": 3,
  "plugin": ModuleFederationPlugin {
    "_options": {
      "name": "host",
      "shared": {
        "@squide/core": {
          "eager": true,
          "singleton": true,
        },
        "@squide/msw": {
          "eager": true,
          "singleton": true,
        },
        "@squide/react-router": {
          "eager": true,
          "singleton": true,
        },
        "@squide/webpack-module-federation": {
          "eager": true,
          "singleton": true,
        },
        "react": {
          "eager": true,
          "requiredVersion": undefined,
          "singleton": true,
        },
        "react-dom": {
          "eager": true,
          "singleton": true,
        },
        "react-router-dom": {
          "eager": true,
          "singleton": true,
        },
      },
    },
  },
}
`;

exports[`defineBuildRemoteModuleConfig includes react-router and msw dependencies 1`] = `
{
  "index": 2,
  "plugin": ModuleFederationPlugin {
    "_options": {
      "exposes": {
        "./register": "./src/register",
      },
      "filename": "remoteEntry.js",
      "name": "remote1",
      "shared": {
        "@squide/core": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/msw": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/react-router": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/webpack-module-federation": {
          "eager": undefined,
          "singleton": true,
        },
        "react": {
          "eager": undefined,
          "requiredVersion": undefined,
          "singleton": true,
        },
        "react-dom": {
          "eager": undefined,
          "singleton": true,
        },
        "react-router-dom": {
          "eager": undefined,
          "singleton": true,
        },
      },
    },
  },
}
`;

exports[`defineDevHostConfig includes react-router and msw dependencies 1`] = `
{
  "index": 3,
  "plugin": ModuleFederationPlugin {
    "_options": {
      "name": "host",
      "shared": {
        "@squide/core": {
          "eager": true,
          "singleton": true,
        },
        "@squide/msw": {
          "eager": true,
          "singleton": true,
        },
        "@squide/react-router": {
          "eager": true,
          "singleton": true,
        },
        "@squide/webpack-module-federation": {
          "eager": true,
          "singleton": true,
        },
        "react": {
          "eager": true,
          "requiredVersion": undefined,
          "singleton": true,
        },
        "react-dom": {
          "eager": true,
          "singleton": true,
        },
        "react-router-dom": {
          "eager": true,
          "singleton": true,
        },
      },
    },
  },
}
`;

exports[`defineDevRemoteModuleConfig includes react-router and msw dependencies 1`] = `
{
  "index": 1,
  "plugin": ModuleFederationPlugin {
    "_options": {
      "exposes": {
        "./register": "./src/register",
      },
      "filename": "remoteEntry.js",
      "name": "remote1",
      "shared": {
        "@squide/core": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/msw": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/react-router": {
          "eager": undefined,
          "singleton": true,
        },
        "@squide/webpack-module-federation": {
          "eager": undefined,
          "singleton": true,
        },
        "react": {
          "eager": undefined,
          "requiredVersion": undefined,
          "singleton": true,
        },
        "react-dom": {
          "eager": undefined,
          "singleton": true,
        },
        "react-router-dom": {
          "eager": undefined,
          "singleton": true,
        },
      },
    },
  },
}
`;
